# switchboard

./: .gitignore  AGENTS.md  CONFIG.md  Cargo.toml  README.md
.agents/: build-engineer.toml  code-reviewer.toml  docs-writer.toml  researcher.toml
.claude/agents/: build-engineer.agent.md  code-reviewer.agent.md  docs-writer.agent.md  researcher.agent.md
.github/chatmodes/: build-engineer.chatmode.md  code-reviewer.chatmode.md  docs-writer.chatmode.md  planning.chatmode.md  researcher.chatmode.md
crates/switchboard-mcp/: Cargo.toml
crates/switchboard-mcp/src/: codex_runner.rs  config.rs  handler.rs  loader.rs  main.rs
crates/switchboard-mcp/src/mcp/: discovery.rs  enumerator.rs  mod.rs  types.rs
crates/switchboard-mcp/src/model/: mod.rs  naming.rs  prepared.rs  source.rs  types.rs
crates/switchboard-mcp/src/modelmap/: apply.rs  default.rs  load.rs  mod.rs  types.rs
crates/switchboard-mcp/src/parser/: anthropic_frontmatter.rs  codex_toml.rs  mod.rs  vscode_chatmode.rs
crates/switchboard-mcp/src/toolmap/: apply.rs  mod.rs  types.rs
examples/hierarchical-agents/: README.md
examples/hierarchical-agents/routers/: router-dotnet.toml  router-frontend.toml  router-rust.toml
examples/hierarchical-agents/specialists/: specialist-correctness-reviewer.toml  specialist-error-handling-reviewer.toml  specialist-maintainability-reviewer.toml  specialist-tests-reviewer.toml
examples/hierarchical-agents/supervisor/: review-supervisor.toml
