[workspace]
members = [
    "crates/switchboard-mcp",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nikhil <nikhil@nikhil.com.np>"]
license = "MIT"

[workspace.dependencies]
proptest = "1.7.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time", "fs", "signal"] }
env-flags = "0.1.1"
serde = "1.0.219"
serde_json = "1.0.143"
tracing = "0.1.41"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
async-trait = "0.1.89"
once_cell = "1.21.3"
tempfile = "3.21.0"
rust-mcp-sdk = { version = "0.6.3", default-features = false }
rust-mcp-schema = "0.7.3"
toml = "0.9.5"
anyhow = "1.0.93"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
debug = false

[workspace.lints.rust]
unsafe_code = "forbid"
# tracing macros internally use `#[allow(unused_imports)]`; set to deny to avoid E0453
unused_imports = "deny"
unused_variables = "forbid"
dead_code = "deny"

[workspace.metadata.cargo-llvm-cov]
default-features = false
